[gd_scene load_steps=6 format=4 uid="uid://cxvxay8qkqxt"]

[ext_resource type="Script" uid="uid://doq1otjmvrtg5" path="res://actors/HiddenGem.gd" id="1_0k8w6"]
[ext_resource type="Script" uid="uid://cxf8gb242c2s8" path="res://systems/DebugBorder.gd" id="3_debug"]
[ext_resource type="TileSet" uid="uid://bqxvw4rkqh00i" path="res://content/Tileset.tres" id="3_qhaff"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="HiddenGem" type="Area2D"]
script = ExtResource("1_0k8w6")

[node name="DebugBorder" type="Node2D" parent="."]
visible = false
script = ExtResource("3_debug")

[node name="GemSprite" type="ColorRect" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.9, 0.1, 0.9, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.22, 1.22857)
shape = SubResource("CircleShape2D_1")

[node name="GlowParticles" type="CPUParticles2D" parent="."]
amount = 15
lifetime = 1.5
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 360.0
gravity = Vector2(0, -10)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.3
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_1")

[node name="CollectParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
one_shot = true
emission_shape = 1
emission_sphere_radius = 25.0
direction = Vector2(0, -1)
spread = 360.0
gravity = Vector2(0, 50)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.5
scale_amount_max = 1.2
color = Color(1, 1, 0.5, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-26, 1)
scale = Vector2(0.4, 0.4)
tile_map_data = PackedByteArray("AAABAP7/EgEBAAIAAAABAP//EgEBAAMAAAABAAAAEgEBAAQAAAACAP3/EgECAAEAAAACAP7/EgECAAIAAAACAP//EgECAAMAAAACAAAAEgECAAQAAAACAAEAEgECAAUAAAADAP3/EgEDAAEAAAADAP7/EgEDAAIAAAADAP//EgEDAAMAAAADAAAAEgEDAAQAAAADAAEAEgEDAAUAAAADAAIAEgEDAAYAAAAEAP3/EgEEAAEAAAAEAP7/EgEEAAIAAAAEAP//EgEEAAMAAAAEAAAAEgEEAAQAAAAEAAEAEgEEAAUAAAAEAAIAEgEEAAYAAAAFAP3/EgEFAAEAAAAFAP7/EgEFAAIAAAAFAP//EgEFAAMAAAAFAAAAEgEFAAQAAAAFAAEAEgEFAAUAAAAGAP7/EgEGAAIAAAAGAP//EgEGAAMAAAAGAAAAEgEGAAQAAAA=")
tile_set = ExtResource("3_qhaff")
